<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="CBot" Id="{f4886908-fb41-433f-afe8-034fdf25a3d9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
  tTimeOutAxisMC_C              : TIME := T#3S;
  tTimeOutRobotStop_C           : TIME := T#5S;
  tTimeOutAxisMasterMC_C        : TIME := T#3S;
  uiRetryPowerOnCnt_C           : UINT := 6;
  
  lrAroundZero_C                : LREAL := 0.18; // m/s //used to check if velocity is around 0 m/s
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>