<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="G" Id="{eef4e233-9823-4e3c-834f-ad07c940bdd3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
  _stSystemStatus_AR      : ST_SystemStatus_AR;
  stSystemStatus_ARR      : REFERENCE TO ST_SystemStatus_AR := _stSystemStatus_AR;
  
  
  {attribute 'TcNcAxis' := '.L1LeftFront                     := CGSMini_R01AxisL1LeftFront;
                          .L1LeftBack                        := CGSMini_R01AxisL1LeftBack;
                          .L2RightFront                      := CGSMini_R01AxisL2RightFront;
                          .L2RightBack                       := CGSMini_R01AxisL2RightBack;
                          .Master                            := CGSMini_R01AxisMaster'}
  stAX : ST_Robot_Axes;
  
  (*
  {attribute 'TcNcAxis' := '.L1LeftFront                     := Sim_Robot01AxisLine1Front;
                          .L1LeftBack                        := Sim_Robot01AxisLine1Back;
                          .L2RightFront                       := Sim_Robot01AxisLine2Front;
                          .L2RightBack                        := Sim_Robot01AxisLine2Back;
                          .Master                           := Sim_Robot01AxisMaster'}
  stAxes : ST_Robot_Axes;*)
  
  AxisL1LeftFront   : CL_AxisL1LeftFront;
  AxisL2RightFront  : CL_AxisL2RighFront;
  AxisL1LeftBack    : CL_AxisL1LeftBack;
  AxisL2RightBack   : CL_AxisL2RightBack;
  AxisMaster        : CL_AxisMaster;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>